--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "express-validator": "^6.6.1",
     "mongoose": "^5.10.8"
   }
 }
