--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-validator": "^6.6.1",
-    "mongoose": "^5.10.8"
+    "mongoose": "^5.10.8",
+    "multer": "^1.4.2"
   },
   "devDependencies": {}
 }
